--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-     <meta property="og:image" content="my.png" />
+     <meta property="og:image" content=”%PUBLIC_URL%/my.png”/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/my.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
